feat: Add database setup script, schema verification, and update dependencies
- Created `setup_database.sh` for automated database setup and seeding.
- Added `verify_schema.sql` for schema verification post-migrations.
- Updated `uv.lock` to include `slowapi` and `deprecated` packages with their dependencies.

--- a/alembic.ini
+++ b/alembic.ini
@@ -57,7 +57,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://user:password@localhost:5432/blood_donor_db
+sqlalchemy.url = postgresql://blood_donor_user:blood_donor_pass@localhost:5432/blood_donor_db
 
 
 [post_write_hooks]
