--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DATABASE_USER=blood_donor_user
 DATABASE_PASSWORD=blood_donor_pass
 
 # JWT
-SECRET_KEY=your-super-secret-key-change-in-production
+SECRET_KEY=dev-secret-key-change-in-production-12345
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
@@ -19,9 +19,9 @@ DEBUG=True
 ENVIRONMENT=development
 
 # CORS
-ALLOWED_ORIGINS=["http://localhost:3000", "http://localhost:8081", "exp://192.168.1.100:8081"]
+ALLOWED_ORIGINS=["http://localhost:3000", "http://localhost:8081"]
 
-# Redis (for Celery)
+# Redis
 REDIS_URL=redis://localhost:6379/0
 
 # Logging
