--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-decouple>=3.8",
     "python-jose[cryptography]>=3.5.0",
     "redis>=7.1.0",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.46",
     "uvicorn[standard]>=0.40.0",
 ]
