--- a/.env
+++ b/.env
@@ -1,13 +1,9 @@
-# Database
+# Database - Use the DATABASE_URL provided by Render in production
+# For local development, use the format below
 DATABASE_URL=postgresql://blood_donor_user:blood_donor_pass@localhost:5432/blood_donor_db
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=blood_donor_db
-DATABASE_USER=blood_donor_user
-DATABASE_PASSWORD=blood_donor_pass
 
 # JWT
-SECRET_KEY=dev-secret-key-change-in-production-12345
+SECRET_KEY=prod-secret-key-change-in-production-12345
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
@@ -15,11 +11,11 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # Application
 APP_NAME=Blood Donor API
 APP_VERSION=1.0.0
-DEBUG=True
-ENVIRONMENT=development
+DEBUG=False
+ENVIRONMENT=production
 
 # CORS
-ALLOWED_ORIGINS=["http://localhost:3000", "http://localhost:8081"]
+ALLOWED_ORIGINS=["https://backend-blood-donor-api.onrender.com", "http://localhost:3000", "http://localhost:8081"]
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
